--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rustic"
+name = "rustix"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,3 +11,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 tokio = { version = "1.29.1", features = ["full"] }
 sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
+actix-web = "4"
+askama = "0.12.0"
+actix-web-lab = "0.19.1"
