--- a/data/app/books/config/application.yaml
+++ b/data/app/books/config/application.yaml
@@ -1,6 +1,6 @@
-# Application "Books" pour "Rustic"
+# Application "Books" pour "Rustix"
 app_id: books
-title: "Books pour Rustic"
+title: "Books pour Rustix"
 group: billerot
 image: "book.png"
 menu:
