--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,20 @@
 [package]
 name = "rustic"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
-
+authors = ["Philippe Billerot <philippe.billerot@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dotenv = "0.15.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
-tokio = { version = "1.29.1", features = ["full"] }
-sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
 actix-web = "4"
-askama = "0.12.0"
 actix-web-lab = "0.19.1"
+askama = "0.12.0"
+chrono = { version = "0.4", features = ["serde"] }
+dotenv = "0.15.0"
+env_logger = "0.7.1"
+log = "0.4.19"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.104"
+serde_yaml = "0.9"
+sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "bigdecimal"] }
+tokio = { version = "1.29.1", features = ["full"] }
