--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ serde_json = "1.0.104"
 serde_yaml = "0.9"
 sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "bigdecimal"] }
 tokio = { version = "1.29.1", features = ["full"] }
+actix-session = { version = "0.7.2", features = ["cookie-session"] }
+futures-util = "0.3.28"
