--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,12 @@
 # build stage
-FROM rust:latest as cargo-build
+FROM rust:alpine as cargo-build
 
 RUN apt-get update && apt-get install libpq-dev musl-tools -y
 RUN rustup target add x86_64-unknown-linux-musl
 
 WORKDIR /usr/src/app
 
-COPY . .
+COPY ../ .
 
 RUN RUSTFLAGS=-Clinker=musl-gcc cargo build --release --target=x86_64-unknown-linux-musl
 
