--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rustic"
-version = "0.2.0"
+name = "silex"
+version = "0.4.0"
 edition = "2021"
 authors = ["Philippe Billerot <philippe.billerot@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -21,5 +21,6 @@ log = "0.4.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.104"
 serde_yaml = "0.9"
-sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "bigdecimal"] }
+# sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "bigdecimal"] }
+sqlx = { version = "0.7.1", features = ["runtime-async-std", "postgres", "uuid", "chrono", "bigdecimal"] }
 tokio = { version = "1.29.1", features = ["full"] }
