--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "silex"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
-authors = ["Philippe Billerot <philippe.billerot@gmail.com>"]
+authors = ["Philippe Billerot"]
 
 [dependencies]
 # actix-csrf = "0.7.0"
