--- a/config/lexic/admin/config/application.yaml
+++ b/config/lexic/admin/config/application.yaml
@@ -1,12 +1,12 @@
 # application ADMIN de beedul
-app_id: admin
+appid: "admin"
 title: "Gestion des Utilisateurs"
 image: "/bee/data/admin/groups.png"
-group: admin
+group: "admin"
 menu:
-- table_id: users
-  view_id: vall
+- tableid: "users"
+  viewid: "vall"
   in_footer: true
-- table_id: groups
-  view_id: vall
+- tableid: "groups"
+  viewid: "vall"
   in_footer: true
