--- a/config/lexic/portail.yaml
+++ b/config/lexic/portail.yaml
@@ -1,4 +1,4 @@
-title: "Silex en action"
+title: "Silex en action..."
 info: "Cadriciel de développement WEB en Yaml et Sql"
 icon_file: "silex.svg"
 
