--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "silex"
-version = "0.5.5"
+version = "0.6.0"
 edition = "2021"
 authors = ["Philippe Billerot"]
 
@@ -11,7 +11,6 @@ actix-session = { version = "0.7.2", features = ["cookie-session"] }
 actix-settings = "0.6.0"
 actix-web = "4"
 actix-web-lab = "0.19.1"
-askama = "0.12.0"
 chrono = { version = "0.4", features = ["serde"] }
 cookie = "0.17.0"
 dotenv = "0.15.0"
@@ -22,4 +21,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.104"
 serde_yaml = "0.9"
 sqlx = { version = "0.7.1", features = ["runtime-async-std", "postgres", "uuid", "chrono", "bigdecimal"] }
+tera = "1.19.0"
 tokio = { version = "1.29.1", features = ["full"] }
