--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,6 @@ log = "0.4.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.104"
 serde_yaml = "0.9"
-sqlx = { version = "0.7.1", features = ["runtime-async-std", "postgres", "uuid", "chrono", "bigdecimal"] }
+sqlx = { version = "0.7.1", features = ["runtime-async-std", "postgres", "sqlite", "uuid", "chrono", "bigdecimal"] }
 tera = "1.19.0"
 tokio = { version = "1.29.1", features = ["full"] }
