--- a/config/lexic/jecompte/config/jec_jeux.yaml
+++ b/config/lexic/jecompte/config/jec_jeux.yaml
@@ -7,36 +7,36 @@ setting:
 
 elements:
   id:
-    type: counter
+    type_element: counter
     label_long: "id"
     label_short: "id"
     order: 10
     hide: true
   partie:
-    type: number
+    type_element: number
     label_long: "N° partie"
     label_short: "N°"
     order: 20
     col_align: "center"
   joueur:
-    type: text
+    type_element: text
     label_long: "Joueur"
     label_short: "Joueur"
     order: 30
   points:
-    type: number
+    type_element: number
     label_long: "Points de la partie"
     label_short: "Points"
     width: l
     order: 40
     class-sqlite: "select case when {points} < 0 then 'negative' else '' end"
   rem:
-    type: text
+    type_element: text
     label_short: "Note"
     label_long: "Note"
     order: 50
   _rub_chart:
-    type: chart
+    type_element: chart
     order: 70
     dataset:
       chartid: "select 'chart-jecompte'"
@@ -45,7 +45,7 @@ elements:
       # calcul du n° des 7 couleurs possible 0 à 6 - un joueur aur toujours la même couleur
       couleurs: "select jj.num from jec_joueurs as j left outer join (select joueur, ((row_number() over (order by joueur)) % 7) as num from jec_joueurs where actif = 1) as jj on jj.joueur = j.joueur where actif = 1 order by j.cumul desc"
   cumul:
-    type: text
+    type_element: number
     label_short: "Cumul"
     order: 60
     jointure:
@@ -56,7 +56,7 @@ views:
   vjeux:
     form_edit: fedit
     #form_view: fview (édition directe sans passer par fview)
-    type: table
+    type_element: table
     title: "Parties"
     icon_name: "th list"
     order-by: jec_jeux.partie desc, tt.cumul desc
@@ -75,13 +75,13 @@ views:
       with_confirm: true
 
   vgraph:
-    type: dashboard
+    type_element: dashboard
     title: "Graphique"
     icon_name: chart bar
     elements:
       _card_chart:
         order: 200
-        type: card
+        type_element: card
         label_long: "Résultats en graphique"
         width: xxl
         icon_name: chart bar
