--- a/config/lexic/admin/config/users.yaml
+++ b/config/lexic/admin/config/users.yaml
@@ -2,33 +2,37 @@
 setting:
   alias_db: admin
   key: user_name
-  col_display: user_name
   icon_name: "user"
 
 elements:
   user_name:
+    order: 10
     type_element: text
     label_long: "Nom ou pseudo"
     label_short: "Nom ou pseudo"
     pattern: "[a-zA-Z0-9]+"
     required: true
   user_password:
+    order: 30
     type_element: password
     label_long: "Mot de passe"
     pattern: "[a-zA-Z0-9_-]+"
     required: true
     min_length: 3
   user_email:
+    order: 40
     type_element: email
     label_long: "Email"
     label_short: "Email"
     required: true
   user_is_admin:
+    order: 50
     type_element: checkbox
     label_long: "Administrateur"
     label_short: "Administrateur"
     col_align: center
   user_groupes:
+    order: 60
     type_element: tag
     label_long: "Groupes"
     label_short: "Groupes"
@@ -36,11 +40,13 @@ elements:
     width: xl
     items_sql: "select group_id as key, group_id as label from groups order by group_id"
   _pwd_change:
+    order: 100
     type_element: button
     label_long: "Changer le mot de passe..."
     params:
       url: "/bee/edit/admin/users/vall/fpwd/{user_name}"
   _card_MDP:
+    order: 200
     type_element: card
     label_long: "Sécurité"
     icon_name: lock
