--- a/config/lexic/portail.yaml
+++ b/config/lexic/portail.yaml
@@ -1,9 +1,8 @@
-title: "Silex en action..."
+title: "Bienvenue sur le portail Silex..."
 info: "Cadriciel de développement WEB en Yaml et Sql"
 icon_file: "silex.svg"
 
 # Liste des applications gérées par le portail
 applications:
-- books
 - admin
 - jecompte
