--- a/config/lexic/admin/config/users.yaml
+++ b/config/lexic/admin/config/users.yaml
@@ -70,6 +70,7 @@ views:
     form_view: fview
     form_add: fadd
     form_edit: fedit
+    type_view: card
     group: admin
     deletable: true
     title: "Comptes Utilisateurs"
