--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ dotenv = "0.15.0"
 env_logger = "0.7.1"
 futures-util = "0.3.28"
 log = "0.4.19"
+markdown = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.104"
 serde_yaml = "0.9"
